JSON beolvasasa megoldva
JSON beolvasas es kivalasztott item adatainak kiiratasa

--- a/src/MainDashboard/MainDashboard.form
+++ b/src/MainDashboard/MainDashboard.form
@@ -106,7 +106,7 @@
     </DimensionLayout>
     <DimensionLayout dim="1">
       <Group type="103" groupAlignment="0" attributes="0">
-          <Component id="mainPanel" alignment="1" pref="527" max="32767" attributes="0"/>
+          <Component id="mainPanel" alignment="1" max="32767" attributes="0"/>
           <Group type="102" attributes="0">
               <EmptySpace max="-2" attributes="0"/>
               <Component id="detailsPanel" max="32767" attributes="0"/>
@@ -256,7 +256,7 @@
                     <Component class="javax.swing.JTable" name="comicBooksTable">
                       <Properties>
                         <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
-                          <Table columnCount="4" rowCount="4">
+                          <Table columnCount="3" rowCount="4">
                             <Column editable="true" title="Title" type="java.lang.Object">
                               <Data value=""/>
                               <Data value="null"/>
@@ -265,7 +265,6 @@
                             </Column>
                             <Column editable="true" title="Genre" type="java.lang.Object"/>
                             <Column editable="true" title="Publisher" type="java.lang.Object"/>
-                            <Column editable="true" title="Edition" type="java.lang.Object"/>
                           </Table>
                         </Property>
                       </Properties>
@@ -446,16 +445,26 @@
 
       <Layout class="org.netbeans.modules.form.compat2.layouts.DesignBorderLayout"/>
       <SubComponents>
-        <Component class="javax.swing.JLabel" name="detailsTitleLabel">
-          <Properties>
-            <Property name="text" type="java.lang.String" value="Select an item to see details"/>
-          </Properties>
+        <Container class="javax.swing.JScrollPane" name="detailsScrollPane">
           <Constraints>
             <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignBorderLayout" value="org.netbeans.modules.form.compat2.layouts.DesignBorderLayout$BorderConstraintsDescription">
-              <BorderConstraints direction="North"/>
+              <BorderConstraints direction="Center"/>
             </Constraint>
           </Constraints>
-        </Component>
+
+          <Layout class="org.netbeans.modules.form.compat2.layouts.support.JScrollPaneSupportLayout"/>
+          <SubComponents>
+            <Component class="javax.swing.JTextArea" name="detailsTextArea">
+              <Properties>
+                <Property name="editable" type="boolean" value="false"/>
+                <Property name="columns" type="int" value="20"/>
+                <Property name="lineWrap" type="boolean" value="true"/>
+                <Property name="rows" type="int" value="5"/>
+                <Property name="wrapStyleWord" type="boolean" value="true"/>
+              </Properties>
+            </Component>
+          </SubComponents>
+        </Container>
       </SubComponents>
     </Container>
   </SubComponents>
